# cubee

./: .gitignore  README.md  pyproject.toml
cubee/configs/: filepath.py
cubee/data/: hive.py  queen.py  utils.py
data/: formatted.csv
notebooks/: 1. Data Preparation.ipynb  2. Data Exploration.ipynb  3. Survival Models.ipynb  3.1. Colony Survival Models.ipynb  3.2. Queen Survival Models.ipynb  4. Bayesian Discrete Network.ipynb  colony_model  queen_model
