[project]
name = "cubee"
version = "0.1.0"
description = ""
authors = [
    {name = "Nico Coallier"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-survival (>=0.25.0,<0.26.0)",
    "pymc (>=5.25.1,<6.0.0)",
    "pgmpy (>=1.0.0,<2.0.0)",
    "pygraphviz (>=1.14,<2.0)",
    "lifelines (>=0.30.0,<0.31.0)",
    "pymer4 (>=0.9.2,<0.10.0)",
    "polars (>=1.34.0,<2.0.0)",
    "rpy2 (>=3.6.4,<4.0.0)",
    "great-tables (>=0.19.0,<0.20.0)",
    "graphviz (>=0.21,<0.22)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
